updated package ownership

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-npm-package-template",
+  "name": "react-autolink-heading",
   "version": "0.0.0-development",
   "description": "A template for creating npm packages using TypeScript and VSCode",
   "main": "./lib/index.js",
@@ -18,13 +18,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryansonshine/typescript-npm-package-template.git"
+    "url": "git+https://github.com/FranciscoMoretti/react-autolink-heading.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Ryan Sonshine",
-    "email": "ryansonshine@users.noreply.github.com",
-    "url": "https://github.com/ryansonshine"
+    "name": "Francisco Moretti",
+    "email": "FranciscoMoretti@users.noreply.github.com",
+    "url": "https://github.com/FranciscoMoretti"
   },
   "engines": {
     "node": ">=12.0"
@@ -40,11 +40,10 @@
     "codecov"
   ],
   "bugs": {
-    "url": "https://github.com/ryansonshine/typescript-npm-package-template/issues"
+    "url": "https://github.com/FranciscoMoretti/react-autolink-heading/issues"
   },
-  "homepage": "https://github.com/ryansonshine/typescript-npm-package-template#readme",
+  "homepage": "https://github.com/FranciscoMoretti/react-autolink-heading#readme",
   "devDependencies": {
-    "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.11",
     "@types/react": "^16.3.13",
