--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "react-autolink-heading",
   "version": "0.0.2",
-  "description": "A template for creating npm packages using TypeScript and VSCode",
-  "main": "./lib/index.js",
-  "module": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "files": [
-    "lib/**/*"
-  ],
+  "description": "A component to add links to headings with ids back to themselves",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
-    "clean": "rm -rf ./lib/",
-    "lint": "eslint ./src/ --fix",
+    "build": "tsup index.ts --format cjs,esm --dts --tsconfig  tsconfig.build.json",
+    "release": "pnpm run build && changeset publish",
+    "lint": "tsc && eslint ./src/ --fix",
     "prepare": "husky install",
-    "semantic-release": "semantic-release",
     "test:watch": "jest --watch",
-    "test": "jest --coverage",
-    "typecheck": "tsc --noEmit"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -32,87 +27,40 @@
     "node": ">=12.0"
   },
   "keywords": [
-    "boilerplate",
-    "template",
+    "navigation",
+    "react",
     "typescript",
-    "vscode",
     "jest",
-    "husky",
-    "semantic-release",
-    "codecov"
+    "husky"
   ],
   "bugs": {
     "url": "https://github.com/FranciscoMoretti/react-autolink-heading/issues"
   },
   "homepage": "https://github.com/FranciscoMoretti/react-autolink-heading#readme",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@types/jest": "^27.5.2",
-    "@types/node": "^12.20.11",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/node": "^12.20.55",
+    "@types/react": "^16.14.45",
+    "@types/react-dom": "^16.9.19",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^6.0.0",
-    "jest": "^27.2.0",
-    "lint-staged": "^13.2.1",
-    "prettier": "^2.2.1",
-    "semantic-release": "^21.0.1",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.2.4"
+    "jest": "^27.5.1",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix"
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "conventionalcommits",
-          "releaseRules": [
-            {
-              "type": "build",
-              "scope": "deps",
-              "release": "patch"
-            }
-          ]
-        }
-      ],
-      [
-        "@semantic-release/release-notes-generator",
-        {
-          "preset": "conventionalcommits",
-          "presetConfig": {
-            "types": [
-              {
-                "type": "feat",
-                "section": "Features"
-              },
-              {
-                "type": "fix",
-                "section": "Bug Fixes"
-              },
-              {
-                "type": "build",
-                "section": "Dependencies and Other Build Updates",
-                "hidden": false
-              }
-            ]
-          }
-        }
-      ],
-      "@semantic-release/npm",
-      "@semantic-release/github"
-    ]
   },
   "dependencies": {
     "github-slugger": "^2.0.0",
