--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup index.ts --format cjs,esm --dts --tsconfig  tsconfig.build.json",
+    "build": "tsup src/index.tsx --format cjs,esm --dts --tsconfig  tsconfig.build.json",
     "release": "pnpm run build && changeset publish",
     "lint": "tsc && eslint ./src/ --fix",
     "prepare": "husky install",
