--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsup src/index.tsx --format cjs,esm --dts --tsconfig  tsconfig.build.json",
     "release": "pnpm run build && changeset publish",
-    "lint": "tsc",
+    "lint": "tsc && eslint ./src/ --fix",
     "prepare": "husky install",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
@@ -43,10 +43,10 @@
     "@types/node": "^12.20.55",
     "@types/react": "^16.14.45",
     "@types/react-dom": "^16.9.19",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "^8.47.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
