--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-autolink-heading",
   "version": "0.0.5",
   "description": "A component to add links to headings with ids back to themselves",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "exports": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsup src/index.tsx --format cjs,esm --dts --tsconfig  tsconfig.build.json",
     "release": "pnpm run build && changeset publish",
@@ -24,7 +25,7 @@
     "url": "https://github.com/FranciscoMoretti"
   },
   "engines": {
-    "node": ">=12.0"
+    "node": ">=16"
   },
   "keywords": [
     "navigation",
