--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.6",
   "description": "A component to add links to headings with ids back to themselves",
   "exports": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsup src/index.tsx --format cjs,esm --dts --tsconfig  tsconfig.build.json",
+    "build": "tsup src/index.tsx --format esm --dts --tsconfig  tsconfig.build.json",
     "release": "pnpm run build && changeset publish",
     "lint": "tsc && eslint ./src/ --fix",
     "prepare": "husky install",
